--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "test": "turbo run test --parallel --filter=./packages/*",
         "lint": "turbo run lint --parallel --filter=./packages/*",
         "dev": "turbo run dev --filter=./packages/*",
-        "clean": "rm -rf ./packages/**/*dist"
+        "clean": "rm -rf ./packages/**/*dist",
+        "aron": "aron"
     },
     "repository": {
         "type": "git",
@@ -17,7 +18,7 @@
         "examples/*"
     ],
     "devDependencies": {
-        "aronrepo": "^1.0.0-beta.15",
+        "aronrepo": "^1.0.0-beta.17",
         "concurrently": "^7.6.0",
         "dedent": "^0.7.0",
         "eslint-plugin-react-hooks": "^4.6.0",
