--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "check": "turbo run test lint --parallel --filter=./packages/*",
         "test": "turbo run test --parallel --filter=./packages/*",
         "lint": "turbo run lint --parallel --filter=./packages/*",
+        "type-check": "turbo run type-check --filter=./packages/*",
         "dev": "turbo run dev --filter=./packages/*",
         "clean": "rm -rf ./packages/**/*dist",
         "aron": "aron"
@@ -18,7 +19,7 @@
         "examples/*"
     ],
     "devDependencies": {
-        "aronrepo": "^1.0.0-beta.17",
+        "aronrepo": "^1.0.0-beta.18",
         "concurrently": "^7.6.0",
         "dedent": "^0.7.0",
         "eslint-plugin-react-hooks": "^4.6.0",
