--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -1,11 +1,8 @@
 {
     "name": "@master/css.compiler",
     "scripts": {
-        "build:cjs": "esbuild src/index.ts --bundle --outfile=dist/index.cjs --format=cjs --platform=node --minify --sourcemap --external:@master/css",
-        "build:esm": "esbuild src/index.ts --bundle --outfile=dist/index.mjs --format=esm --platform=node --minify --sourcemap --external:@master/css",
-        "build:type": "tsc --emitDeclarationOnly --preserveWatchOutput",
-        "build": "conc 'npm:build:*'",
-        "dev": "conc 'npm:build:* -- --watch'",
+        "build": "aron pack --platform=node",
+        "dev": "npm run build -- --watch",
         "lint": "eslint ./src"
     },
     "license": "MIT",
