--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -1,14 +1,11 @@
 {
     "name": "@master/css",
     "scripts": {
-        "build:iife": "esbuild src/index.browser.ts --bundle --outfile=dist/index.browser.js --format=iife --minify --sourcemap",
-        "build:cjs": "esbuild src/index.ts --bundle --outfile=dist/index.cjs --format=cjs --platform=node --minify --sourcemap",
-        "build:esm": "esbuild src/index.ts --bundle --outfile=dist/index.mjs --format=esm --platform=node --minify --sourcemap",
-        "build:type": "tsc --emitDeclarationOnly --preserveWatchOutput",
-        "build": "conc 'npm:build:*'",
-        "dev": "conc 'npm:build:* -- --watch'",
+        "build": "aron pack --platform=node",
+        "dev": "npm run build -- --watch",
         "test": "jest",
-        "lint": "eslint ./src"
+        "type-check": "tsc --noEmit",
+        "lint": "eslint src"
     },
     "license": "MIT",
     "description": "A Virtual CSS language with enhanced syntax ~13KB",
