--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,13 +1,10 @@
 {
     "name": "@master/css.react",
     "scripts": {
-        "build:iife": "esbuild src/index.tsx --bundle --outfile=dist/index.browser.js --format=iife --minify --sourcemap --external:@master/css --external:react",
-        "build:cjs": "esbuild src/index.tsx --bundle --outfile=dist/index.cjs --format=cjs --platform=node --minify --sourcemap --external:@master/css --external:react",
-        "build:esm": "esbuild src/index.tsx --bundle --outfile=dist/index.mjs --format=esm --minify --sourcemap --external:@master/css --external:react",
-        "build:type": "tsc --emitDeclarationOnly --preserveWatchOutput",
-        "build": "conc 'npm:build:*'",
-        "dev": "conc 'npm:build:* -- --watch'",
-        "lint": "eslint ./src"
+        "build": "aron pack --platform=node",
+        "dev": "npm run build -- --watch",
+        "type-check": "tsc --noEmit",
+        "lint": "eslint src"
     },
     "license": "MIT",
     "description": "React hooks and components for Master CSS",
