--- a/turbo.json
+++ b/turbo.json
@@ -24,6 +24,11 @@
         },
         "lint": {
             "outputs": []
+        },
+        "type-check": {
+            "outputs": [
+                "dist/**"
+            ]
         }
     }
 }
