--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "check": "turbo run test lint --parallel --filter=./packages/*",
         "test": "turbo run test --parallel --filter=./packages/*",
         "lint": "turbo run lint --parallel --filter=./packages/*",
-        "type-check": "turbo run type-check --filter=./packages/*",
+        "type-check": "turbo run type-check --parallel --filter=./packages/*",
         "dev": "turbo run dev --filter=./packages/*",
         "clean": "rm -rf ./packages/**/*dist",
         "aron": "aron"
