--- a/turbo.json
+++ b/turbo.json
@@ -19,7 +19,8 @@
             "outputs": [],
             "inputs": [
                 "src/**/*.tsx",
-                "src/**/*.ts"
+                "src/**/*.ts",
+                "tests/**/*.ts"
             ]
         },
         "lint": {
