Fix(React): Incorrect packing

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -29,7 +29,7 @@
     "sideEffects": false,
     "main": "./dist/index.cjs",
     "jsnext:main": "./dist/index.mjs",
-    "browser": "./dist/index.browser.js",
+    "browser": "./dist/index.js",
     "esnext": "./dist/index.mjs",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
