--- a/.github/workflows/check-pull-request-title.yml
+++ b/.github/workflows/check-pull-request-title.yml
@@ -16,7 +16,7 @@ jobs:
                 node-version: [18.12.1]
         steps:
             - name: Aron Actions
-              uses: 1aron/aronrepo@latest
+              uses: 1aron/aronrepo@v1.0.0-beta.25
               with:
                   action: 'check-pull-request-title'
               env:
