--- a/packages/normal.css/package.json
+++ b/packages/normal.css/package.json
@@ -5,7 +5,7 @@
         "dev": "npm run build -- --watch"
     },
     "license": "MIT",
-    "description": "Normalize browser's styles ~500B",
+    "description": "Normalize the browser's styles ~500B",
     "author": "Aoyue Design LLC.",
     "funding": "https://docs.master.co/css/donate",
     "homepage": "https://css.master.co",
