--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "check": "turbo run test lint --parallel --filter=./packages/*",
         "test": "turbo run test --parallel --filter=./packages/*",
         "lint": "turbo run lint --parallel --filter=./packages/*",
+        "publish": "turbo run publish --parallel --filter=./packages/*",
         "type-check": "turbo run type-check --parallel --filter=./packages/*",
         "dev": "turbo run dev --filter=./packages/*",
         "clean": "rm -rf ./packages/**/*dist",
@@ -16,6 +17,8 @@
     },
     "workspaces": [
         "packages/*",
+        "packages/language-service/server",
+        "packages/language-service/client",
         "examples/*"
     ],
     "devDependencies": {
