Misc: Eslint fix

--- a/packages/language-service/server/package.json
+++ b/packages/language-service/server/package.json
@@ -8,7 +8,13 @@
     },
     "dependencies": {
         "vscode-languageserver": "^7.0.0",
-        "vscode-languageserver-textdocument": "^1.0.4"
+        "vscode-languageserver-textdocument": "^1.0.4",
+        "@master/css": "",
+        "@types/js-beautify": "^1.13.3",
+        "file-uri-to-path": "^2.0.0",
+        "js-beautify": "^1.14.3",
+        "minimatch": "^5.1.0",
+        "pascal-case": "^3.1.2"
     },
     "scripts": {},
     "devDependencies": {
