--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,8 +26,5 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-            - name: Publish
-              run: npm run publish
-              env:
-                  GITHUB_TOKEN: ${{ secrets.VSCE_PAT }}
+                  VSCE_PAT: ${{ secrets.VSCE_PAT }}
+                  
