--- a/packages/language-service/tsconfig.json
+++ b/packages/language-service/tsconfig.json
@@ -1,8 +1,10 @@
 {
+    "extends": "../../tsconfig.json",
     "compilerOptions": {
         "module": "commonjs",
         "target": "es2020",
         "lib": ["es2020"],
+        "baseUrl": ".",
         "outDir": "out",
         "rootDir": "src",
         "sourceMap": true
