--- a/packages/language-service/client/tsconfig.json
+++ b/packages/language-service/client/tsconfig.json
@@ -1,11 +1,8 @@
 {
+    "extends": "../../../tsconfig.json",
     "compilerOptions": {
-        "module": "commonjs",
-        "target": "es2020",
-        "lib": ["es2020"],
-        "outDir": "out",
-        "rootDir": "src",
-        "sourceMap": true
+        "baseUrl": ".",
+        "outDir": "out"
     },
     "include": ["src"],
     "exclude": ["node_modules", ".vscode-test"]
