--- a/packages/language-service/package.json
+++ b/packages/language-service/package.json
@@ -20,7 +20,21 @@
     "activationEvents": [
         "onStartupFinished"
     ],
-    "main": "./client/out/extension",
+    "main": "./client/dist/extension.cjs",
+    "jsnext:main": "./client/dist/extension.mjs",
+    "esnext": "./client/dist/extension.mjs",
+    "module": "./client/dist/extension.mjs",
+    "types": "./client/dist/extension.d.ts",
+    "exports": {
+        ".": {
+            "require": "./client/dist/extension.cjs",
+            "import": "./client/dist/extension.mjs",
+            "types": "./client/dist/extension.d.ts"
+        }
+    },
+    "files": [
+        "dist"
+    ],
     "contributes": {
         "languages": [
             {
@@ -159,14 +173,9 @@
     },
     "scripts": {
         "deploy": "mv ../../package.json ../../_package.json && npm i vsce -D && vsce publish && mv ../../_package.json ../../package.json",
-        "build": "tsc -b"
+        "publish": "vsce publish"
     },
     "devDependencies": {
-        "@types/node": "^14.17.0",
-        "@typescript-eslint/eslint-plugin": "^5.13.0",
-        "@typescript-eslint/parser": "^5.13.0",
-        "eslint": "^8.10.0",
-        "typescript": "^4.6.2",
         "vsce": "^2.14.0"
     }
 }
