--- a/packages/language-service/client/package.json
+++ b/packages/language-service/client/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@master/css-language-client",
     "scripts": {
-        "build": "aron pack"
+        "build": "aron pack --platform=node"
     },
     "description": "VSCode part of a language server",
     "author": "Aoyue Design LLC.",
@@ -17,16 +17,19 @@
         "@types/vscode": "^1.63.0",
         "@vscode/test-electron": "^2.1.2"
     },
-    "main": "./dist/index.cjs",
-    "jsnext:main": "./dist/index.mjs",
-    "esnext": "./dist/index.mjs",
-    "module": "./dist/index.mjs",
-    "types": "./dist/index.d.ts",
+    "peerDependencies": {
+        "vscode": ""
+    },
+    "main": "./dist/extension.cjs",
+    "jsnext:main": "./dist/extension.mjs",
+    "esnext": "./dist/extension.mjs",
+    "module": "./dist/extension.mjs",
+    "types": "./dist/extension.d.ts",
     "exports": {
         ".": {
-            "require": "./dist/index.cjs",
-            "import": "./dist/index.mjs",
-            "types": "./dist/index.d.ts"
+            "require": "./dist/extension.cjs",
+            "import": "./dist/extension.mjs",
+            "types": "./dist/extension.d.ts"
         }
     },
     "files": [
