Misc(Language Service): Run Extension

--- a/packages/language-service/package.json
+++ b/packages/language-service/package.json
@@ -7,7 +7,7 @@
     "homepage": "https://css.master.co",
     "license": "MIT",
     "publisher": "masterco",
-    "version": "2.0.0-beta.90",
+    "version": "2.1.6",
     "icon": "icon.png",
     "repository": {
         "type": "git",
