--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -47,6 +47,6 @@
     ],
     "dependencies": {
         "@master/css": "",
-        "chalk": "^5.1.2"
+        "aronlog": "^1.0.0-beta.31"
     }
 }
