--- a/examples/svelte-kit/package.json
+++ b/examples/svelte-kit/package.json
@@ -28,6 +28,7 @@
         "prettier": "^2.6.2",
         "prettier-plugin-svelte": "^2.7.0",
         "rollup": "^2.79.1",
+        "sorcery": "^0.10.0",
         "svelte": "^3.46.0",
         "svelte-check": "^2.7.1",
         "svelte-preprocess": "^4.10.6",
