--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -47,6 +47,7 @@
     ],
     "dependencies": {
         "@master/css": "",
-        "aronlog": "^1.0.0-beta.32"
+        "aronlog": "^1.0.0-beta.32",
+        "normalize-path": "^3.0.0"
     }
 }
