--- a/examples/svelte-kit/package.json
+++ b/examples/svelte-kit/package.json
@@ -10,8 +10,7 @@
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
         "lint": "prettier --plugin-search-dir . --check . && eslint .",
         "format": "prettier --plugin-search-dir . --write .",
-        "link": "npm link ../../",
-        "unlink": "npm rm ../../"
+        "clear-build": "rm -rf **/*master.css .svelte-kit node_modules/.vite && npm run build"
     },
     "devDependencies": {
         "@fontsource/fira-mono": "^4.5.0",
