--- a/examples/svelte-kit/package.json
+++ b/examples/svelte-kit/package.json
@@ -1,25 +1,27 @@
 {
-	"name": "svelte-kit",
-	"version": "0.0.1",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
-	},
-	"devDependencies": {
-		"@fontsource/fira-mono": "^4.5.10",
-		"@neoconfetti/svelte": "^1.0.0",
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
-		"@types/cookie": "^0.5.1",
-		"svelte": "^3.53.1",
-		"svelte-check": "^2.9.2",
-		"svelte-preprocess": "^4.10.7",
-		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
-		"vite": "^3.2.4"
-	},
-	"type": "module"
+    "name": "svelte-kit",
+    "private": true,
+    "version": "0.0.1",
+    "scripts": {
+        "dev": "vite dev",
+        "build": "vite build",
+        "preview": "vite preview",
+        "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+    },
+    "devDependencies": {
+        "@master/css.vite": "",
+        "@fontsource/fira-mono": "^4.5.10",
+        "@neoconfetti/svelte": "^1.0.0",
+        "@sveltejs/adapter-auto": "next",
+        "@sveltejs/kit": "next",
+        "@types/cookie": "^0.5.1",
+        "svelte": "^3.53.1",
+        "svelte-check": "^2.9.2",
+        "svelte-preprocess": "^4.10.7",
+        "tslib": "^2.4.1",
+        "typescript": "^4.9.3",
+        "vite": "^3.2.4"
+    },
+    "type": "module"
 }
