--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
         "build": "turbo run build --filter=./packages/**/*",
         "build:clean": "rm -rf ./packages/**/*dist && turbo run build --force --no-cache --filter=./packages/**/*",
         "check": "turbo run test lint --parallel --filter=./packages/**/*",
-        "test": "turbo run test --parallel --filter=./packages/**/*",
+        "test": "turbo run test --parallel",
         "lint": "turbo run lint --parallel --filter=./packages/**/*",
         "type-check": "turbo run type-check --parallel --filter=./packages/**/*",
         "dev": "turbo run dev --filter=./packages/**/*",
@@ -25,7 +25,7 @@
         "concurrently": "^7.6.0",
         "dedent": "^0.7.0",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "glob-run": "^0.1.7",
+        "fast-glob": "^3.2.12",
         "jest-environment-jsdom": "^29.3.1",
         "jest-puppeteer": "^6.1.1",
         "puppeteer": "^19.2.2"
