--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
     "scripts": {
         "build": "turbo run build --filter=./packages/**/*",
         "build:clean": "rm -rf ./packages/**/*dist && turbo run build --force --no-cache --filter=./packages/**/*",
-        "check": "turbo run test lint --parallel --filter=./packages/**/*",
+        "check": "npm run commit-check && turbo run test lint --parallel --filter=./packages/**/*",
         "test": "turbo run test --parallel",
         "lint": "turbo run lint --parallel --filter=./packages/**/*",
         "type-check": "turbo run type-check --parallel --filter=./packages/**/*",
+        "commit-check": "commitlint --from=HEAD~1 --verbose",
         "dev": "turbo run dev --filter=./packages/**/*",
         "clean:dist": "rm -rf ./packages/**/*dist",
         "clean:node": "rm -rf ./packages/**/*node_modules"
@@ -21,7 +22,7 @@
         "examples/*"
     ],
     "devDependencies": {
-        "aronrepo": "^1.0.0-beta.33",
+        "aronrepo": "^1.0.0-beta.38",
         "concurrently": "^7.6.0",
         "dedent": "^0.7.0",
         "eslint-plugin-react-hooks": "^4.6.0",
