--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "private": true,
     "scripts": {
         "build": "turbo run build --filter=./packages/**/*",
         "build:clean": "rm -rf ./packages/**/*dist && turbo run build --force --no-cache --filter=./packages/**/*",
