--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -51,6 +51,6 @@
         "@master/css.compiler": ""
     },
     "devDependencies": {
-        "vite": ">= 3.0.0"
+        "vite": "^3.0.0"
     }
 }
