Update(Webpack): Scan sources and inject with `master.css`

--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -48,6 +48,7 @@
     ],
     "dependencies": {
         "@master/css": "",
-        "@master/css.compiler": ""
+        "@master/css.compiler": "",
+        "webpack-virtual-modules": "^0.5.0"
     }
 }
