--- a/examples/next.js/package.json
+++ b/examples/next.js/package.json
@@ -9,14 +9,17 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "next": "13.0.6",
+        "react": "18.2.0",
+        "react-dom": "18.2.0"
+    },
+    "devDependencies": {
         "@types/node": "18.11.15",
         "@types/react": "18.0.26",
         "@types/react-dom": "18.0.9",
         "eslint": "8.29.0",
         "eslint-config-next": "13.0.6",
-        "next": "13.0.6",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "typescript": "4.9.4"
+        "typescript": "4.9.4",
+        "@master/css.webpack": ""
     }
 }
