--- a/examples/next.js@12/package.json
+++ b/examples/next.js@12/package.json
@@ -21,6 +21,7 @@
         "@types/react-dom": "18.0.6",
         "eslint": "8.25.0",
         "eslint-config-next": "12.3.1",
-        "typescript": "4.8.4"
+        "typescript": "4.8.4",
+        "@master/css.webpack": ""
     }
 }
