Example(Next.js 13): Update to Next.js 13

--- a/examples/next.js@12/package.json
+++ b/examples/next.js@12/package.json
@@ -1,6 +1,5 @@
 {
-    "name": "nextjs",
-    "version": "0.1.0",
+    "name": "next.js-12",
     "private": true,
     "scripts": {
         "dev": "next dev -p 3200",
