--- a/examples/next.js/package.json
+++ b/examples/next.js/package.json
@@ -1,6 +1,5 @@
 {
     "name": "next.js",
-    "version": "0.1.0",
     "private": true,
     "scripts": {
         "dev": "next dev",
@@ -9,17 +8,17 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "next": "13.0.6",
-        "react": "18.2.0",
-        "react-dom": "18.2.0"
-    },
-    "devDependencies": {
+        "@next/font": "13.0.7",
         "@types/node": "18.11.15",
         "@types/react": "18.0.26",
         "@types/react-dom": "18.0.9",
-        "eslint": "8.29.0",
-        "eslint-config-next": "13.0.6",
-        "typescript": "4.9.4",
-        "@master/css.webpack": ""
+        "next": "13.0.7",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "typescript": "4.9.4"
+    },
+    "devDependencies": {
+        "@master/css.webpack": "",
+        "client-only": "^0.0.1"
     }
 }
