--- a/.github/workflows/commit-check.yml
+++ b/.github/workflows/commit-check.yml
@@ -25,5 +25,5 @@ jobs:
               with:
                   node-version: ${{ matrix.node-version }}
                   cache: 'npm'
-            - run: npm ci
+            - run: npm i
             - run: npm run commit-check
