--- a/examples/next.js@12/package.json
+++ b/examples/next.js@12/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "next.js-12",
+    "name": "master-css-aot-in-next.js-12",
     "private": true,
     "scripts": {
         "dev": "next dev -p 3200",
