--- a/examples/vite/package.json
+++ b/examples/vite/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "vite",
+    "name": "master-css-aot-in-vite",
     "private": true,
     "version": "0.0.0",
     "type": "module",
@@ -10,7 +10,7 @@
     },
     "devDependencies": {
         "typescript": "^4.9.3",
-        "vite": "^4.0.0",
+        "vite": "^4.0.1",
         "@master/css.vite": ""
     }
 }
