--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,9 @@
             "es2021",
             "dom"
         ]
-    }
+    },
+    "include": [
+        "./master.css.js",
+        "./master.css.mjs"
+    ]
 }
