--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -46,11 +46,11 @@
     "files": [
         "dist"
     ],
+    "peerDependencies": {
+        "vite": ">=3.0.0"
+    },
     "dependencies": {
         "@master/css": "",
         "@master/css.compiler": ""
-    },
-    "devDependencies": {
-        "vite": "^3.0.0"
     }
 }
