Update Nuxt.js example

--- a/examples/nuxt.js/package.json
+++ b/examples/nuxt.js/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "master-css-aot-in-nuxt",
+    "name": "master-css-aot-in-nuxt.js",
     "private": true,
     "scripts": {
         "build": "nuxt build",
